--- a/templates/font1.html
+++ b/templates/font1.html
@@ -1,6 +1,8 @@
 $def with (projects, master=None)
-$var title: $:"Fonts"
-
+<title>Settings</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <style>
 h3_b {
   position:absolute;
