--- a/templates/editor.html
+++ b/templates/editor.html
@@ -32,7 +32,7 @@ $var title: Editor
         </div>
     </div>
     
-    <div class="col-md-4">
+    <div class="col-md-4" axis-position="middle">
 
     </div>
     
