added version to javascript

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -48,7 +48,7 @@ $var title: Editor
 <script type="text/javascript" src="/static/js/bootstrap-slider.js"></script>
 <script type="text/javascript" src="/static/js/jquery.filedrop.js"></script>
 <script type="text/javascript" src="/static/js/canvas.js"></script>
-<script type="text/javascript" src="/static/js/editor.js"></script>
+<script type="text/javascript" src="/static/js/editor.js?v2"></script>
 <script type="text/javascript">
     $$(function(){
         var editor = new Editor("$websession.get('mfparser', 'counterpoints')");
