--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@ right {
 <body>
 
 
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
