--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,10 @@ right {
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            $if page.get('title') == 'Projects':
+              <li class="active"><a href="/projects/">Projects</a></li>
+            $else:
+              <li><a href="/projects/">Projects</a></li>
             $if page.get('title') == 'Fonts':
               <li class="active"><a href="/fonts/">Fonts</a></li>
             $else:
