--- a/templates/font1.html
+++ b/templates/font1.html
@@ -76,10 +76,10 @@ color:red;
 <div class="row">
     
     <div class="col-md-2">
-      $if not websession.get('mfparser', '') or websession.mfparser == 'counterpoints':
+      $if not websession.get('mfparser', '') or websession.mfparser == 'pen':
         <a href="javascript:;" class="btn btn-success">counter points</a>
       $else:
-        <form action="/mfparser-switch/counterpoints/" method="post">
+        <form action="/mfparser-switch/pen/" method="post">
           <button class="btn btn-default">counter points</button>
         </form>
     </div>
