--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,10 +5,10 @@ $var title: $:"Projects"
 <div class="row">
     
     <div class="col-md-2">
-      $if not websession.get('mfparser', '') or websession.mfparser == 'counterpoints':
+      $if not websession.get('mfparser', '') or websession.mfparser == 'pen':
         <a href="javascript:;" class="btn btn-success">counter points</a>
       $else:
-        <form action="/mfparser-switch/counterpoints/" method="post">
+        <form action="/mfparser-switch/pen/" method="post">
           <button class="btn btn-default">counter points</button>
         </form>
     </div>
