--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@ right {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Metapolator</a>
+          <a class="navbar-brand" href="/projects/">Metapolator</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
