--- a/templates/projects.html
+++ b/templates/projects.html
@@ -28,6 +28,6 @@ $var title: $:"Projects"
 
 $for project in projects:
   <div>
-    <a href="/editor/#project/$project.id" style="color:green;text-decoration:underline;">$project.projectname</a><a href="/specimen/$project.id/" class="btn btn-small">Specimen</a><br><br>
+    <a href="/workspace/#project/$project.id" style="color:green;text-decoration:underline;">$project.projectname</a><a href="/specimen/$project.id/" class="btn btn-small">Specimen</a><br><br>
   </div>
 </p>
