added in documentation API page with example full project data json

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -93,6 +93,7 @@ $var title: Workspace
 <script type="text/javascript" src="/static/js/3rdparty/jquery.ba-hashchange.min.js"></script>
 
 <!-- <script type="text/javascript" src="/static/js/demodata.js"></script> -->
+<script type="text/javascript" src="/static/js/localparamform.js"></script>
 <script type="text/javascript" src="/static/js/glyph.js"></script>
 <script type="text/javascript" src="/static/js/view.js"></script>
 <script type="text/javascript" src="/static/js/workspace.js"></script>
