--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -88,6 +88,9 @@ $var title: Workspace
     </div>
 </div>
 
+<script type="text/javascript">
+window.MFPARSER = "$:websession.get('mfparser')";
+</script>
 
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
 <script type="text/javascript" src="/static/js/3rdparty/jquery.filedrop.js"></script>
